# userver-demo

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  clang.toolchain  conanfile.txt  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
charts/userver-demo/: Chart.yaml  values.yaml
charts/userver-demo/templates/: _helpers.tpl  deployment.yaml  service.yaml
cmake/: userver.cmake
conan/profiles/userver-demo/: default
config/: static_config.yaml
configs/: static_config.yaml
proto/health/: health.proto
src/: main.cpp
src/components/health/: health_service_component.cpp  health_service_component.h
src/components/samples/: greeter_client_component.cpp  greeter_client_component.h  greeter_http_handler_component.cpp  greeter_http_handler_component.h  greeter_service_component.cpp  greeter_service_component.h
